kornell-gwt/src/main/webapp/skins/first/css/utils/forms.less
@import "colors";
@import "mixins";

.btn-primary {
  .btnSelected;
}
.btnDefault{
	//text-shadow: 1px 1px 1px fade(@contentBoxBackgroundColor, 50%);
	font-size: 11px !important;	
	font-weight: bold !important;
	padding-left: 10px !important;
	padding-right: 10px !important;
	color: @buttonTextColor !important;
	text-shadow: none !important;
	border-radius: 5px !important;
	display: block;
	border: 0px !important;
}
.btnIcon{
	i {
		margin-right: 5px !important;
		margin-left: 0px !important;
		font-size: 15px;
	}
}
.btnIconSolo{
	i {
		margin-right: 0px !important;
		margin-left: 0px !important;
		font-size: 15px;
	}
	float: right;
	width: 14px !important;
	margin-right: 5px;
}
.btnNotSelected{
	.btnDefault;
	//.gradientHat(~"linear-gradient(to bottom, @buttonActionGradientStart 0%,@buttonActionGradientEnd 100%)"); 
	.gradient(@buttonNotSelectedGradientStart, @buttonNotSelectedGradientEnd);
}
.btnSelected{
	.btnDefault;
	//.gradientHat(~"linear-gradient(to bottom, @buttonActionGradientStart 0%,@buttonActionGradientEnd 100%)"); 
 	.gradient(@buttonSelectedGradientStart, @buttonSelectedGradientEnd);
}
.btnAction{
	.btnDefault;
	//.gradientHat(~"linear-gradient(to bottom, @buttonActionGradientStart 0%,@buttonActionGradientEnd 100%)"); 
 	.gradient(@buttonActionGradientStart, @buttonActionGradientEnd);
}
.standardButtonBarSmall{
	width: 130px !important;
}	
.standardButtonBar{
	width: 260px;
	margin: 0 auto;
	clear: both;
	.btnStandard{
		margin: 15px;
	}
}
.btnStandard{
	font-weight: bold;
	font-size: 10px;
	width: 100px;
	height: 22px;
	line-height: 21px;
	border-radius: 5px;
	border: 0;
	display: inline-block;
}
.btnBorder{
	border-left: 1px solid @buttonBorderLeftColor !important;
}
.last .btnPanel{
	border-right: 1px solid @buttonBorderRightColor !important;
}

.fieldPanelWrapper{
	width: 725px;
	height: 55px;
	float: left;
	.labelPanelImg{
		height: 98px;
	}
	.fieldPanelImage{
		height: 100px;	
	}
	.labelPanel{
		width: 230px;
		margin-right: 15px;
		float: left;
		.lblLabelImg{
			color: @profileLabelColor;
			font-size: 16px;
			padding-top: 25px;
			line-height: 25px;
		}
		.lblLabel{
			color: @profileLabelColor;
			font-size: 14px;
			line-height: 46px;
			text-align: right;
			line-height: 25px;
			padding-top: 6px;
		}
		.lblExtraInfo{
			color:	@profileLabelExtraInfoColor;
			font-size: 10px;
			line-height: 10px;
			text-align: right;
		}
	}
	.fieldPanel{
		float: left;
		width: 475px;
		.textField{
			width: 448px;
			margin-bottom: 0px;
		}
		.selectField{
			width: 462px;;
		}
		.lblValue{
			color:	@profileLabelValueColor;
			margin-top: 11px;
			line-height: 15px;
			font-size: 14px;
		}
		.checkbox{
			margin-top: 8px;
		}
	}
}
/*@media screen and (max-width: @wrapperWidth) {
	.fieldPanelWrapper{
			width: @wrapperWidthUnder990;
			height: auto;
		.labelPanelImg{
			height: auto;
		}
		.labelPanel{
			width: auto;
			float: none;
			text-align: left;
			.lblLabelImg{
				float: left;
				padding-right: 40px;
				padding-left: 15px;
				text-decoration: underline;
			}
			.lblLabel{
				float: none;
				padding-left: 15px;
				text-decoration: underline;
			}
			.lblExtraInfo{
				float: none;
				text-align: left;
				padding-left: 20px;
			}
		}
		.labelPanelImg{
			float: left;
		}
		.lblValue{
			width: auto;
			float: none;
			padding-left: 50px;
		}
		.lblValueAdd{
			width: auto;
			float: none;
			padding-left: 50px;
		}
		.publicPanel{
			float: none;
			padding-left: 50px;
		}
	}
}*/

.anchorToLabel {
	color: @niceTextColor !important;
	&:hover {
		cursor: default;
		color: @niceTextColor !important;
		text-decoration: none;
	}
}




.fileUploadWrapper{
	float: left;
	margin-bottom: 20px;
	margin-left: 242px;
	img{
		float: left;
		margin-bottom: 10px;
	}
	input[type="file"]{
		float: left;
		clear: both;
		width: 284px !important;
		color: @niceTextColor;
		font-size: 12px;
		line-height: 20px !important;
		background: transparent;
	}
	button{
		float: left;
	}
}

.modal-backdrop, .modal-backdrop.fade.in {
	opacity: 0.5 !important;
	filter: alpha(opacity=50) !important;
}
.modal{
	width: 480px !important;
	background: @modalBackgroundColor !important;
	.modal-body{
		color: @niceTextColor;
	}
	.standardButtonBar{
		width: 220px;
		margin-top: 25px;
		.btnAction{
			margin: 0;
		}
		.btnNotSelected{
			margin: 0;
			margin-left: 20px;
		}
	}
	h3{
		color: @niceTextColor;
		font-size: 20px;
	}
	textarea{
		width: 434px;
		height: 144px;
		margin-top: 10px;
		margin-bottom: 10px;
	}
}


.titlePanel{
	height: 30px;
	padding-top: 20px;
	margin-bottom: 30px;
	.imgTitle{
		float: left;
		padding-left: 20px;
		padding-right: 20px;
	}
	.lblTitle{
		font-size: 17px;
		color: @plainTextColor;
		float: left;
	}
}


.pagination ul>li>a{
	background-color: transparent !important;
	border: 1px solid @buttonBorderLeftColor !important;
	border-left: 0px !important;
}
.pagination ul>li:first-child>a{
	border-left: 1px solid @buttonBorderLeftColor !important;
}
.pagination ul>.active>a{
	background-color: transparent !important;
	border: 1px solid @buttonBorderLeftColor !important;
	border-left: 0px !important;
}
.nav-tabs{
	font-size: 14px;
	font-weight: bold;
	margin-bottom: 30px !important;
	border-bottom: 2px solid @tableBackgroundHoverColor !important;
}
.nav-tabs>.active>a, .nav-tabs>.active>a:hover, .nav-tabs>li>a:hover {
	background-color: @tableBackgroundHoverColor !important;
	border: 1px solid transparent !important;
	border-bottom: 0px !important;
	color: @textInfoColor !important;
}
.nav-pills>.active>a,.nav-pills>.active>a:hover{
	background-color: @tableBackgroundHoverColor !important;
	color: @textInfoColor !important;
}

.dropdown-menu .active>a, 
.dropdown-menu .active>a:hover,
.dropdown-menu li>a:hover, 
.dropdown-menu li>a:focus, 
.dropdown-submenu:hover>a{
	color: @niceTextColor;
	background-color: @contentBoxBackgroundColor !important;
	background-image: webkit-gradient(linear, 0 0, 0 100%, from(@contentBoxBackgroundColor), to(@contentBoxBackgroundColor)) !important;
	background-image: linear-gradient(to bottom, @contentBoxBackgroundColor, @contentBoxBackgroundColor) !important;
}

.forgotPasswordModal {
	.fieldPanelWrapper{
		width: auto !important;
		.labelPanel{
			width: 140px !important;
		}
	}
}

